@@ -51,9 +51,8 @@
 		<spring.framework.version>4.3.3.RELEASE</spring.framework.version>
 		<spring.framework.integration.version>4.3.2.RELEASE</spring.framework.integration.version>
 		<spring.framework.data.version>1.4.2.RELEASE</spring.framework.data.version>
-		<vaadin.version>7.5.6</vaadin.version>
+		<vaadin.version>7.7.3</vaadin.version>
 		<vaadin.plugin.version>${vaadin.version}</vaadin.plugin.version>
-		<jetty.plugin.version>9.2.3.v20140905</jetty.plugin.version>
 		<hibernate-version>4.3.10.Final</hibernate-version>
 		<hyperjaxb3-ejb-runtime.version>0.5.6</hyperjaxb3-ejb-runtime.version>
 		<hyperjaxb-version>0.5.6</hyperjaxb-version>
@@ -62,9 +61,9 @@
    		<maven.build.timestamp.format>yyyy-MM-dd HH:mm:ss</maven.build.timestamp.format>
 		<jaxb22.version>2.2.4-1</jaxb22.version>
 		<skipITs>true</skipITs>
-		<maduradocs.version>6.2.1</maduradocs.version>
-		<madura.vaadin.version>3.2.2</madura.vaadin.version>
-		<madura.version>3.2.0</madura.version>
+		<maduradocs.version>6.3.2</maduradocs.version>
+		<madura.vaadin.version>3.3.0</madura.vaadin.version>
+		<madura.version>3.3.5</madura.version>
    		<timestamp>${maven.build.timestamp}</timestamp>
    		<maven.build.timestamp.format>yyyy-MM-dd HH:mm:ss</maven.build.timestamp.format>
 	</properties>
@@ -99,7 +98,7 @@
 	 		<dependency>
 				<groupId>nz.co.senanque</groupId>
 				<artifactId>madura-bundle</artifactId>
-				<version>4.4.0</version>
+				<version>4.5.9</version>
 				<exclusions>
 					<!-- Needs to be excluded because it pulls the wrong version -->
 					<exclusion>
@@ -121,7 +120,7 @@
 			</dependency>
 			<dependency>
 				<groupId>nz.co.senanque</groupId>
-				<artifactId>madura-login</artifactId>
+				<artifactId>madura-springsecurity-login</artifactId>
 				<version>${madura.vaadin.version}</version>
 			</dependency>
 			<dependency>
@@ -249,7 +248,7 @@
 			<dependency>
 				<groupId>nz.co.senanque</groupId>
 				<artifactId>madura-resource-loader</artifactId>
-				<version>1.3.0</version>
+				<version>1.4.0</version>
 			</dependency>
 			<dependency>
 				<groupId>org.jvnet.hyperjaxb3</groupId>
@@ -331,15 +330,6 @@
 							</goals>
 						</execution>
 					</executions>
-				</plugin>
-				<plugin>
-					<groupId>org.eclipse.jetty</groupId>
-					<artifactId>jetty-maven-plugin</artifactId>
-					<version>${jetty.plugin.version}</version>
-					<configuration>
-						<jvmArgs>-XX:PermSize=128M -XX:MaxPermSize=256M</jvmArgs>
-					    <scanIntervalSeconds>2</scanIntervalSeconds>
-					</configuration>
 				</plugin>
 				<plugin>
 					<groupId>org.kuali.maven.plugins</groupId>
@@ -446,20 +436,15 @@
 	                    </execution>
 	                </executions>
 				</plugin>
-	            <plugin>
-	                <groupId>org.mortbay.jetty</groupId>
-	                <artifactId>jetty-maven-plugin</artifactId>
-	                <version>${jetty.plugin.version}</version>
-	            </plugin>
 	    		<plugin>
 					<groupId>nz.co.senanque</groupId>
 					<artifactId>madura-rules-maven-plugin</artifactId>
-					<version>3.0.0</version>
+					<version>${madura.version}</version>
 				</plugin>
 				<plugin>
 					<groupId>nz.co.senanque</groupId>
 					<artifactId>madura-objects-maven-plugin</artifactId>
-					<version>3.0.0</version>
+					<version>${madura.version}</version>
 				</plugin>
 			      <plugin>
 			        <groupId>org.eclipse.m2e</groupId>
